--- a/UserSettings/QuickSearch.settings
+++ b/UserSettings/QuickSearch.settings
@@ -16,7 +16,7 @@ filters = {
 	asset = true
 }
 scopes = {
-	"last_search.AB59B443" = "gamemana"
+	"last_search.AB59B443" = "playerpref"
 }
 providers = {
 	asset = {
