--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,8 @@ crashlytics-build.properties
 # FMOD
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 fmod_editor.log
+Assets/StreamingAssets/Master.strings.bank
+
+Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
+
+Assets/StreamingAssets/Master.bank
